CHANGES.txt - 10/04/2004
------------------------

CHANGES IN CUPS V1.1.22rc1

	- Deleting a printer could cause a crash with browsing
	  enabled (STR #865, STR #881, STR #928)
	- Browsing would turn off if the scheduler got an EAGAIN
	  error (STR #924)
	- The mime.types file didn't recognize PostScript as a
	  PJL language name (STR #925)


CHANGES IN CUPS V1.1.21

	- The scheduler did not separate Digest authentication
	  parameters with commas (STR #882)
	- Fixed some problems with image printing to custom page
	  sizes (STR #891)
	- Removed the remaining scheduler code that did not use
	  the "close-on-exec" file descriptor flag to speed up
	  program invocations (STR #890)
	- The "lpr -r" command removed the print file even if it
	  was not printed. It now only removes the file if the
	  job is successfully created (STR #886)
	- Revamped the custom page size orientation fix (STR
	  #127)
	- The lp, lpq, lpr, and lpstat commands now report when
	  an environment variable is pointing to a non-existent
	  printer instead of just saying "no default
	  destination" (STR #879)
	- Queue names with 2 periods (e.g. "printer..2") were
	  not supported (STR #866)


CHANGES IN CUPS V1.1.21rc2

	- Fixed a denial-of-service bug in the CUPS browse
	  protocol support (STR #863)
	- The scheduler used a select() timeout of INT_MAX
	  seconds when there was nothing to do, which doesn't
	  work on IRIX (STR #864)
	- Updated the cupsaddsmb program to use the new Windows
	  2000 PostScript drivers instead of the Windows NT
	  printer drivers (STR #390)
	- The gziptoany filter did not produce copies for raw
	  print jobs (STR #808)
	- The cupsLangGet() function now uses nl_langinfo(),
	  when available, to get the current encoding (STR #856)
	- Added a ReloadTimeout directive to control how long
	  the scheduler waits for jobs to complete before
	  restarting the scheduler (STR #861)
	- Added a note to the default cupsd.conf file which