@@ -1,5 +1,5 @@
 /*
- * "$Id: banners.c,v 1.13 2004/06/29 03:27:35 mike Exp $"
+ * "$Id: banners.c,v 1.14 2004/10/04 19:40:35 mike Exp $"
  *
  *   Banner routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -211,5 +211,5 @@ compare(const banner_t *b0,	/* I - First banner */
 
 
 /*
- * End of "$Id: banners.c,v 1.13 2004/06/29 03:27:35 mike Exp $".
+ * End of "$Id: banners.c,v 1.14 2004/10/04 19:40:35 mike Exp $".
  */
