@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.138 2004/09/30 14:38:45 mike Exp $"
+ * "$Id: dirsvc.c,v 1.139 2004/10/04 19:40:35 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -916,7 +916,7 @@ StartPolling(void)
   * polling daemon...
   */
 
-  if (cupsdPipe(statusfds))
+  if (cupsdOpenPipe(statusfds))
   {
     LogMessage(L_ERROR, "Unable to create polling status pipes - %s.",
 	       strerror(errno));
@@ -1970,5 +1970,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.138 2004/09/30 14:38:45 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.139 2004/10/04 19:40:35 mike Exp $".
  */
