@@ -1,5 +1,5 @@
 /*
- * "$Id: filter.c,v 1.12 2004/06/29 03:27:35 mike Exp $"
+ * "$Id: filter.c,v 1.13 2004/10/04 19:40:35 mike Exp $"
  *
  *   File type conversion routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -322,5 +322,5 @@ lookup(mime_t      *mime,	/* I - MIME database */
 
 
 /*
- * End of "$Id: filter.c,v 1.12 2004/06/29 03:27:35 mike Exp $".
+ * End of "$Id: filter.c,v 1.13 2004/10/04 19:40:35 mike Exp $".
  */
