@@ -1,5 +1,5 @@
 /*
- * "$Id: mime.c,v 1.20 2004/06/29 03:27:35 mike Exp $"
+ * "$Id: mime.c,v 1.21 2004/10/04 19:40:35 mike Exp $"
  *
  *   MIME database file routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -583,5 +583,5 @@ delete_rules(mime_magic_t *rules)	/* I - Rules to free */
 
 
 /*
- * End of "$Id: mime.c,v 1.20 2004/06/29 03:27:35 mike Exp $".
+ * End of "$Id: mime.c,v 1.21 2004/10/04 19:40:35 mike Exp $".
  */
