@@ -1,5 +1,5 @@
 /*
- * "$Id: network.c,v 1.14 2004/08/18 16:02:44 mike Exp $"
+ * "$Id: network.c,v 1.15 2004/10/04 19:40:35 mike Exp $"
  *
  *   Network interface functions for the Common UNIX Printing System
  *   (CUPS) scheduler.
@@ -16,7 +16,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -487,5 +487,5 @@ freeifaddrs(struct ifaddrs *addrs)	/* I - Interface list to free */
 
 
 /*
- * End of "$Id: network.c,v 1.14 2004/08/18 16:02:44 mike Exp $".
+ * End of "$Id: network.c,v 1.15 2004/10/04 19:40:35 mike Exp $".
  */
