@@ -1,5 +1,5 @@
 /*
- * "$Id: ppds.c,v 1.35 2004/09/09 15:10:18 mike Exp $"
+ * "$Id: ppds.c,v 1.36 2004/10/04 19:40:35 mike Exp $"
  *
  *   PPD scanning routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -777,5 +777,5 @@ load_ppds(const char *d,		/* I - Actual directory */
 
 
 /*
- * End of "$Id: ppds.c,v 1.35 2004/09/09 15:10:18 mike Exp $".
+ * End of "$Id: ppds.c,v 1.36 2004/10/04 19:40:35 mike Exp $".
  */
