@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.163 2004/10/04 19:13:15 mike Exp $"
+ * "$Id: printers.c,v 1.164 2004/10/04 19:40:35 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -2431,5 +2431,5 @@ write_irix_state(printer_t *p)		/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.163 2004/10/04 19:13:15 mike Exp $".
+ * End of "$Id: printers.c,v 1.164 2004/10/04 19:40:35 mike Exp $".
  */
