@@ -3,6 +3,8 @@ CHANGES.txt - 10/04/2004
 
 CHANGES IN CUPS V1.1.22rc1
 
+	- Fixed some memory and file descriptor leaks in the job
+	  dispatch code (STR #921)
 	- Deleting a printer could cause a crash with browsing
 	  enabled (STR #865, STR #881, STR #928)
 	- Browsing would turn off if the scheduler got an EAGAIN
